@@ -1,3 +1,6 @@
 noinst_LTLIBRARIES = libmath.la
 libmath_la_SOURCES = matrix3x3.cpp vector3.cpp
-EXTRA_DIST = matrix3x3.h vector3.h
+
+libmathincludedir = $(includedir)/openbabel/math
+libmathinclude_HEADERS = \
+	matrix3x3.h vector3.h
